--- a/app/src/main/res/layout/list_alarm.xml
+++ b/app/src/main/res/layout/list_alarm.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    card_view:cardCornerRadius="4dp"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="4dp"
     android:layout_margin="5dp">
 
     <LinearLayout
@@ -15,28 +16,30 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="0.7"
+            android:layout_marginLeft="5dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
                 <TextView
                     android:id="@+id/txtDestination"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="23sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     android:text="Stasiun Pondok Rangon"/>
                 <TextView
                     android:id="@+id/txtRadius"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
+                    android:textSize="17sp"
                     android:text="Radius 7 Km"/>
         </LinearLayout>
 
         <android.support.v7.widget.SwitchCompat
             android:layout_width="0dp"
             android:layout_weight="0.3"
-            android:gravity="center"
+            android:layout_marginRight="5dp"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:id="@+id/switchAlarm"/>
 
     </LinearLayout>
